--- a/.gitignore
+++ b/.gitignore
@@ -12,9 +12,9 @@ CTestTestfile.cmake
 _deps
 
 #Ignore folders
-build/
-old/
-.vscode/
+**/build/*
+**/old/*
+**/.vscode/*
 
 #todo
 #add ignore for .vscode and build folder
