--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,9 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 # Set output directory to ./build
 set(CMAKE_BINARY_DIR ${PROJECT_SOURCE_DIR}/build)
 
+# Add all .cpp files in the directory to the executable
+file(GLOB SOURCES ${PROJECT_SOURCE_DIR}/src/*/*/*.cpp)
+
 # Add main.cpp as an executable target
 add_executable(${PROJECT_NAME} main.cpp)
 
@@ -19,13 +22,13 @@ target_include_directories(${PROJECT_NAME} PRIVATE
     ${PROJECT_SOURCE_DIR}/headers/entities/geometry
     ${PROJECT_SOURCE_DIR}/headers/entities/physical
     
-    ${PROJECT_SOURCE_DIR}/src/entities/geometry
-    ${PROJECT_SOURCE_DIR}/src/entities/physical
-    ${PROJECT_SOURCE_DIR}/src/logic/ordinamentoPacchi
-    ${PROJECT_SOURCE_DIR}/src/logic/ottimizzazione
-    ${PROJECT_SOURCE_DIR}/src/logic/sceltaPacchiNesting
-    ${PROJECT_SOURCE_DIR}/src/logic/spostaPacchi
-    ${PROJECT_SOURCE_DIR}/src/logic/trovaDominio
+    # ${PROJECT_SOURCE_DIR}/src/entities/geometry
+    # ${PROJECT_SOURCE_DIR}/src/entities/physical
+    # ${PROJECT_SOURCE_DIR}/src/logic/ordinamentoPacchi
+    # ${PROJECT_SOURCE_DIR}/src/logic/ottimizzazione
+    # ${PROJECT_SOURCE_DIR}/src/logic/sceltaPacchiNesting
+    # ${PROJECT_SOURCE_DIR}/src/logic/spostaPacchi
+    # ${PROJECT_SOURCE_DIR}/src/logic/trovaDominio
     ${PROJECT_SOURCE_DIR}/extLibs/nlohmannJSON
 )
 
